bug on json file

--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "description": "",
   "main": "node.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node node.js",
+    "postinstall": "npm rebuild better-sqlite3 --build-from-source"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs"
+
 }
